--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "pomodoro",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "start": "parcel index.html",
@@ -20,6 +19,10 @@
   "devDependencies": {
     "@babel/core": "^7.13.15",
     "@babel/plugin-transform-runtime": "^7.13.15",
-    "parcel-bundler": "^1.12.5"
-  }
+    "@babel/preset-env": "^7.13.15",
+    "cssnano": "^5.0.1",
+    "parcel-bundler": "^1.12.5",
+    "postcss": "^8.2.10"
+  },
+  "description": ""
 }
